--- a/app/src/main/res/layout/content_pin_set.xml
+++ b/app/src/main/res/layout/content_pin_set.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,25 +12,55 @@
     >
 
     <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         >
 
-
-         <com.app.l_pesa.pinview.PassCodeView
-            android:id="@+id/pass_code_view"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:digits="6"
-            app:digit_size="@dimen/_27sdp"
-            app:key_text_size="@dimen/_27sdp"
-            android:padding="@dimen/_20sdp"
-            app:empty_drawable="@drawable/empty_dot"
-            app:filled_drawable="@drawable/filled_dot"
-            />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/txtHeader"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/your_security_pin"
+                android:textColor="@color/colorTextBlackLight"
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/_25sdp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/pass_code_view"
+
+                />
+
+            <com.app.l_pesa.pinview.PassCodeView
+                android:id="@+id/pass_code_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                app:digits="6"
+                app:digit_size="@dimen/_22sdp"
+                app:key_text_size="@dimen/_22sdp"
+                app:empty_drawable="@drawable/empty_dot"
+                app:filled_drawable="@drawable/filled_dot"
+                app:layout_constraintTop_toBottomOf="@+id/txtHeader"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+
+
+
+        </android.support.constraint.ConstraintLayout>
+
 
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
