--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:inputType="number"
+                android:inputType="numberSigned"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_14sdp"
                 app:itemCount="6"
@@ -54,6 +54,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtHeader"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtResend"
                 />
 
             <TextView
@@ -63,12 +64,10 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/resend_otp"
                 android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/_12sdp"
-                android:textStyle="bold"
+                android:textSize="@dimen/_11sdp"
                 android:gravity="center|end"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:visibility="invisible"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_25sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/otp_view"
@@ -80,11 +79,11 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/_12sdp"
-                android:textStyle="bold"
+                android:textSize="@dimen/_11sdp"
                 android:gravity="center|end"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
+                android:visibility="invisible"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_25sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/otp_view"
