--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -37,7 +37,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView27" />
 
-        <com.app.l_pesa.common.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.app.l_pesa.common.CircularImageView
             android:id="@+id/imgProfilePhoto"
             android:layout_width="@dimen/_75sdp"
             android:layout_height="@dimen/_75sdp"
@@ -53,7 +53,7 @@
             android:id="@+id/imgEditPhoto"
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
-            android:src="@drawable/ic_profile"
+            android:src="@drawable/ic_upload_photo"
             app:layout_constraintBottom_toBottomOf="@+id/imgProfilePhoto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,9 +65,10 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/bg_black_view"
-            android:paddingStart="@dimen/_10sdp"
+            android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_name"
+            android:maxLines="1"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
             android:textColorHint="@color/colorSemiWhite"
@@ -83,9 +84,10 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/bg_black_view"
-            android:paddingStart="@dimen/_10sdp"
+            android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_otp"
+            android:maxLines="1"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
             android:textColorHint="@color/colorSemiWhite"
