--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -69,6 +69,7 @@
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_name"
             android:maxLines="1"
+            android:inputType="textNoSuggestions|text|textPersonName"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
             android:textColorHint="@color/colorSemiWhite"
@@ -88,6 +89,8 @@
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_otp"
             android:maxLines="1"
+            android:maxLength="6"
+            android:inputType="numberSigned"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
             android:textColorHint="@color/colorSemiWhite"
