--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -11,27 +11,29 @@
 
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView27"
+            android:layout_marginTop="@dimen/_20sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="@string/thank_you"
             android:textColor="@color/colorYellow"
-            android:textSize="@dimen/_17sdp"
+            android:textSize="@dimen/_20sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView28"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            />
 
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView28"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
+            android:layout_width="0dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/montserrat"
-            android:text="@string/upload_selfie_picture"
+            android:text="@string/upload_picture"
             android:textColor="@color/colorSemiWhite"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toTopOf="@+id/imgProfilePhoto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,34 +43,37 @@
             android:id="@+id/imgProfilePhoto"
             android:layout_width="@dimen/_75sdp"
             android:layout_height="@dimen/_75sdp"
-            android:layout_marginTop="@dimen/_60sdp"
-            android:src="@drawable/ic_profile"
+            android:src="@drawable/ic_user_no_img_icon"
+            android:layout_marginTop="@dimen/_20sdp"
             app:civ_border_color="@color/screenBackground"
             app:civ_border_width="@dimen/_1sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView28" />
+            app:layout_constraintTop_toBottomOf="@+id/textView28"
 
-        <com.app.l_pesa.common.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            />
+
+        <com.app.l_pesa.common.CircularImageView
             android:id="@+id/imgEditPhoto"
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
+            android:layout_width="@dimen/_24sdp"
+            android:layout_height="@dimen/_24sdp"
             android:src="@drawable/ic_upload_photo"
             app:layout_constraintBottom_toBottomOf="@+id/imgProfilePhoto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto" />
+            app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto"
+           />
 
         <com.app.l_pesa.common.CommonEditTextRegular
             android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/bg_black_view"
             android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_name"
             android:maxLines="1"
+            android:layout_marginTop="@dimen/_25sdp"
             android:inputType="textNoSuggestions|text|textPersonName"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
@@ -83,13 +88,13 @@
             android:id="@+id/etOTP"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_8sdp"
             android:background="@drawable/bg_black_view"
             android:paddingStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:hint="@string/enter_otp"
             android:maxLines="1"
             android:maxLength="6"
+            android:layout_marginTop="@dimen/_5sdp"
             android:inputType="numberSigned"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
@@ -104,13 +109,11 @@
             android:id="@+id/btnSubmit"
             android:layout_width="0dp"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginBottom="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_25sdp"
             android:background="@drawable/yellow_button"
             android:text="@string/final_step"
             android:textColor="@color/colorSemiWhite"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etOTP" />
