--- a/app/src/main/res/layout/content_registration_step_three.xml
+++ b/app/src/main/res/layout/content_registration_step_three.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:textSize="@dimen/_12sdp"
         android:fontFamily="@font/montserrat"
-        android:paddingStart="@dimen/_10sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:paddingEnd="@dimen/_10sdp"
         app:layout_constraintBottom_toTopOf="@+id/imgPersonalType"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,17 +81,18 @@
 
     <EditText
         android:id="@+id/etNo"
-        android:textSize="@dimen/_13sdp"
+        android:textSize="@dimen/_12sdp"
         android:hint="@string/enter_id_number"
         android:textColorHint="@color/colorWhite"
         android:textColor="@color/colorWhite"
         android:layout_width="0dp"
         android:maxLines="1"
+        android:fontFamily="@font/montserrat"
         android:inputType="text"
         android:layout_height="@dimen/_35sdp"
         android:background="@drawable/bg_black_view"
         android:layout_marginTop="@dimen/_15sdp"
-        android:paddingStart="@dimen/_10sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:paddingEnd="@dimen/_10sdp"
         app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +106,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/yellow_button"
         android:text="@string/continue_to_login"
-        android:textSize="@dimen/_13sdp"
+        android:textStyle="bold"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorSemiWhite"
         android:layout_marginTop="@dimen/_15sdp"
