--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -546,6 +546,7 @@
                             android:text="@string/date_of_birth"
                             android:textColor="@color/textColors"
                             android:textSize="@dimen/_12sdp"
+                            android:maxLines="1"
                             app:fontFamily="@font/montserrat"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -574,6 +575,7 @@
                             android:layout_marginStart="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_5sdp"
                             android:text="@string/gender"
+                            android:maxLines="1"
                             android:textColor="@color/textColors"
                             android:textSize="@dimen/_12sdp"
                             app:fontFamily="@font/montserrat"
@@ -603,6 +605,7 @@
                             android:text="@string/marital_status"
                             android:textColor="@color/textColors"
                             android:textSize="@dimen/_12sdp"
+                            android:maxLines="1"
                             app:fontFamily="@font/montserrat"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                             app:layout_constraintEnd_toEndOf="parent"
