--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,9 +17,9 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_7sdp"
-                android:layout_marginRight="@dimen/_12sdp">
+                android:layout_marginEnd="@dimen/_10sdp">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -328,9 +328,9 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_12sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_7sdp"
-                    android:layout_marginRight="@dimen/_12sdp">
+                    android:layout_marginEnd="@dimen/_10sdp">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -425,7 +425,8 @@
                             android:layout_marginStart="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_5sdp"
                             android:fontFamily="@font/montserrat"
-                            android:maxLines="1"
+                            android:maxLines="2"
+                            android:ellipsize="end"
                             android:textColor="@color/textColors"
                             android:textSize="@dimen/_12sdp"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView17"
@@ -469,10 +470,10 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_150sdp"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_12sdp">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -649,9 +650,9 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_12sdp">
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -809,9 +810,9 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_12sdp">
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -925,9 +926,9 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_12sdp">
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -1150,10 +1151,9 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_12sdp"
-                    android:layout_marginBottom="@dimen/_12sdp">
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
