--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_40sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,7 +54,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_address_icon" />
+             />
         <View
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
@@ -104,44 +104,20 @@
     </android.support.constraint.ConstraintLayout>
 
     <com.app.l_pesa.common.CustomButtonRegular
-        android:id="@+id/txtSubmit"
+        android:id="@+id/buttonSubmit"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_32sdp"
-        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:background="@drawable/yellow_button"
         android:text="@string/submit"
         android:fontFamily="@font/montserrat"
-        android:textColorHint="@color/semi_white"
-        android:layout_marginEnd="@dimen/_20sdp"
-        app:layout_constraintEnd_toStartOf="@+id/txtCancel"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textColor="@color/semi_white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_flag_section" />
 
-    <com.app.l_pesa.common.CustomButtonRegular
-        android:id="@+id/txtCancel"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_32sdp"
-        android:layout_marginTop="@dimen/_25sdp"
-        android:background="@drawable/bg_button_grey"
-        android:text="@string/cancel"
-        android:fontFamily="@font/montserrat"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/txtSubmit"
-        app:layout_constraintTop_toBottomOf="@+id/ll_flag_section" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="@dimen/_22sdp"
-        android:layout_height="@dimen/_22sdp"
-        android:indeterminateTint="@color/colorWhite"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSubmit" />
 
     <TextView
         android:id="@+id/textView25"
@@ -154,10 +130,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="@dimen/_9sdp"
+        android:drawablePadding="@dimen/_10sdp"
         android:lineSpacingExtra="@dimen/_2sdp"
         android:textColor="@color/colorSemiWhite"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="@dimen/_32sdp"
+        android:layout_height="@dimen/_32sdp"
+        android:indeterminateTint="@color/colorWhite"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
