--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,7 +17,7 @@
           android:id="@+id/imgProfile"
           android:layout_width="@dimen/_55sdp"
           android:layout_height="@dimen/_55sdp"
-          android:src="@drawable/ic_user_no_img_icon"
+          android:src="@drawable/ic_user"
           app:civ_border_color="@color/screenBackground"
           app:civ_border_width="@dimen/_1sdp"
           android:layout_centerInParent="true"
