--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -64,7 +64,7 @@
             android:hint="@string/enter_name"
             android:maxLines="1"
             android:layout_marginTop="@dimen/_25sdp"
-            android:inputType="text|textCapSentences"
+            android:inputType="textCapWords"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/colorSemiWhite"
             android:textColorHint="@color/colorSemiWhite"
