--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -365,7 +365,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-                        <com.app.l_pesa.common.CircularImageView
+                        <ImageView
                             android:id="@+id/imgProfile"
                             android:layout_width="@dimen/_65sdp"
                             android:layout_height="@dimen/_65sdp"
@@ -374,6 +374,7 @@
                             android:layout_marginBottom="@dimen/_5sdp"
                             android:contentDescription="@string/app_name"
                             android:src="@drawable/ic_user"
+                            android:adjustViewBounds="true"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintRight_toLeftOf="@+id/imageView2"
                             app:layout_constraintStart_toStartOf="parent"
