--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_70sdp"
-    android:orientation="vertical"
-   >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
    <RelativeLayout
        android:layout_width="match_parent"
@@ -12,12 +11,14 @@
        android:background="@color/colorAccent"
        >
 
-      <ImageView
+      <com.app.l_pesa.common.CircularImageView
           android:id="@+id/imgProfile"
           android:layout_width="@dimen/_55sdp"
           android:layout_height="@dimen/_55sdp"
-          android:src="@drawable/ic_user"
-          android:adjustViewBounds="true"
+          android:background="@drawable/ic_user"
+          app:civ_border_width="0dp"
+          app:civ_background_color="@android:color/transparent"
+          app:civ_border_color="@android:color/transparent"
           android:contentDescription="@string/app_name"
           android:layout_centerInParent="true"
           android:layout_alignParentStart="true"
