--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,5 +50,10 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="MyAlertDialogTheme" parent="@android:style/Theme.Material.Light.Dialog.Alert">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 
 </resources>
